[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scences/Option/OptionItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scences/Option/OptionPanel.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "OptionsHide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "OptionsShow"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="OptionPanel" type="Control"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 16
anchor_top = 0.000665326
anchor_right = 1.0
anchor_bottom = 1.00067
margin_top = -0.479034
margin_right = -780.0
margin_bottom = -420.479
rect_min_size = Vector2( 500, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" parent="." instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5

[node name="Option2" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -14.8809
margin_right = 0.0
margin_bottom = 16.1191

[node name="Option3" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0

[node name="Option4" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -31.0
margin_right = 100.0
margin_bottom = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/OptionsHide = SubResource( 2 )
anims/OptionsShow = SubResource( 1 )

[connection signal="make_choose_item" from="Option1" to="." method="_on_Option1_make_choose_item"]
[connection signal="make_choose_item" from="Option2" to="." method="_on_Option2_make_choose_item"]
[connection signal="make_choose_item" from="Option3" to="." method="_on_Option3_make_choose_item"]
[connection signal="make_choose_item" from="Option4" to="." method="_on_Option4_make_choose_item"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
